// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/stars/CTA/styles returns the default styles 1`] = `
Object {
  "backgroundColor": "#1C104E",
  "border": "none",
  "borderRadius": "4px",
  "color": "#FFFFFF",
  "cursor": "pointer",
  "display": "inline-block",
  "fontFamily": "'Raleway', sans-serif",
  "fontSize": "16px",
  "fontWeight": 800,
  "lineHeight": 1,
  "margin": "0 0 32px",
  "padding": "16px",
  "textAlign": undefined,
  "textDecoration": "none",
}
`;

exports[`components/stars/CTA/styles returns the secondary styles 1`] = `
Object {
  "backgroundColor": "#FFFFFF",
  "border": "none",
  "borderRadius": "4px",
  "color": "#1C104E",
  "cursor": "pointer",
  "display": "inline-block",
  "fontFamily": "'Raleway', sans-serif",
  "fontSize": "16px",
  "fontWeight": 800,
  "lineHeight": 1,
  "margin": "0 0 32px",
  "padding": "16px",
  "textAlign": undefined,
  "textDecoration": "none",
}
`;
